--- a/index.html
+++ b/index.html
@@ -154,7 +154,9 @@
   ga('create', 'your-analytics-id', 'auto');
   ga('send', 'pageview');
 </script>
-
+<script>
+  window.location.href="https://blog.csdn.net/qq_24572475/article/category/7934972"
+</script>
 
   <script type="text/javascript">
     var _hmt = _hmt || [];
